--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,8 +59,8 @@ jobs:
         run: |
           echo "Using Docker context:"
           docker context ls
-           ssh -v -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker --context remote pull ghcr.io/xleshka/mentor_link_school:master"
-           ssh -v -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker --context remote pull ghcr.io/xleshka/mentor_link_school_ws:master"
+           ssh -v -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker --context remote pull ghcr.io/mentor_link_school:master"
+           ssh -v -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker --context remote pull ghcr.io/mentor_link_school_ws:master"
            ssh -v -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker --context remote stop mentor_link_school || true"
            ssh -v -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker --context remote rm mentor_link_school || true"
            ssh -v -i ~/.ssh/id_rsa ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "docker --context remote compose -f docker-compose.yml up -d"
