--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,8 @@
 name: Deploy
-
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    types:
-      - closed
-    branches: [ "master" ]
+  workflow_dispatch
+
+
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
