--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3.9'
 services:
   backend1:
     restart: always
-    image: ghcr.io/mentor_link_school:master
+    build:
+      dockerfile: ./Dockerfile
     container_name: backend1
     expose:
      - "8080"
@@ -21,7 +22,8 @@ services:
       - /home/ubuntu/.env:/app/.env
   backendws:
     restart: always
-    image: ghcr.io/mentor_link_school_ws:master
+    build:
+      dockerfile: ./DockerfileWs
     container_name: backendws
     expose:
       - "8080"
@@ -40,7 +42,8 @@ services:
       - /home/ubuntu/.env:/app/.env
   backend2:
     restart: always
-    image: ghcr.io/mentor_link_school:master
+    build:
+      dockerfile: ./Dockerfile
     container_name: backend2
     expose:
       - "8080"
