--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push Docker image
-        run: docker compose build -f docker-compose.yml  --no-cache --force-rm
+        run: docker compose -f docker-compose.yml build --no-cache --force-rm
 #      - name: Cleanup
 #        if: always()
 #        run: |
