--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,26 +43,24 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push Docker image
-        run: docker compose -f docker-compose.yml build --no-cache --force-rm
       - name: Push backend1
         uses: docker/build-push-action@v5
         with:
           file: ./Dockerfile
           push: true
-          tags: ghcr.io/mentorlinkschool-backend1:latest
+          tags: mentorlinkschool-backend1:latest
       - name: Push backend2
         uses: docker/build-push-action@v5
         with:
           file: ./Dockerfile
           push: true
-          tags: ghcr.io/mentorlinkschool-backend2:latest
+          tags: mentorlinkschool-backend2:latest
       - name: Push backendws
         uses: docker/build-push-action@v5
         with:
           file: ./DockerfileWs
           push: true
-          tags: ghcr.io/mentorlinkschool-backendws:latest
+          tags: mentorlinkschool-backendws:latest
   #      - name: Cleanup
 #        if: always()
 #        run: |
@@ -101,7 +99,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Run docker compose
         run: |
-          docker pull ghcr.io/mentorlinkshcool-backend1:latest
-          docker pull ghcr.io/mentorlinkshcool-backend2:latest
-          docker pull ghcr.io/mentorlinkshcool-backendws:latest
+          docker pull mentorlinkshcool-backend1:latest
+          docker pull mentorlinkshcool-backend2:latest
+          docker pull mentorlinkshcool-backendws:latest
           docker compose -f docker-compose.yml up -d
