--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,11 +45,11 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push backend
         run: |
-          docker build -t mentorlinkschool-backend:latest ./Dockerfile
+          docker build -t xleshka/mentorlinkschool-backend:latest -f ./Dockerfile
           docker push ghcr.io/xleshka/mentorlinkschool-backend:latest
       - name: Build and push backend websocket
         run: |
-          docker build -t mentorlinkschool-backendws:latest ./DockerfileWs
+          docker build -t xleshka/mentorlinkschool-backendws:latest -f ./DockerfileWs
           docker push ghcr.io/xleshka/mentorlinkschool-backendws:latest
   #      - name: Cleanup
 #        if: always()
