--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,12 +45,14 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push backend
         run: |
-          docker build -f ./Dockerfile -t mentorlinkshcool/mentorlinkschool-backend:latest .
-          docker push ghcr.io/mentorlinkshcool/mentorlinkschool-backend:latest
+          docker build -f ./Dockerfile -t $IMAGE_NAME .
+          docker tag $IMAGE_NAME ghcr.io/xleshka/$IMAGE_NAME:latest
+          docker push ghcr.io/xleshka/$IMAGE_NAME:latest
       - name: Build and push backend websocket
         run: |
-          docker build -f ./DockerfileWs -t mentorlinkshcool/mentorlinkschool-backendws:latest .
-          docker push ghcr.io/mentorlinkshcool/mentorlinkschool-backendws:latest
+          docker build -f ./DockerfileWs -t $IMAGE_NAME-ws .
+          docker tag $IMAGE_NAME-ws ghcr.io/xleshka/$IMAGE_NAME-ws:latest
+          docker push ghcr.io/xleshka/$IMAGE_NAME-ws:latest
   #      - name: Cleanup
 #        if: always()
 #        run: |
@@ -89,6 +91,6 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Run docker compose
         run: |
-          docker pull ghcr.io/mentorlinkshcool/mentorlinkshcool-backend:latest
-          docker pull ghcr.io/mentorlinkshcool/mentorlinkshcool-backendws:latest
+          docker pull ghcr.io/xleshka/$IMAGE_NAME:latest
+          docker pull ghcr.io/xleshka/$IMAGE_NAME-ws:latest
           docker compose -f docker-compose.yml up -d
