--- a/nginx.conf
+++ b/nginx.conf
@@ -3,12 +3,12 @@ upstream backend {
     server backend2:8080;
 }
 server {
-    listen 443 ssl;
-    server_name _;
+    listen www.example.com:443 ssl;
+    server_name www.example.com;
 
-    ssl_certificate     /etc/nginx/ssl/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
-    ssl_trusted_certificate ssl/chain.pem;
+    ssl_certificate     /etc/letsencrypt/live/example.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/example.com/chain.pem;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
