--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       minio:
         condition: service_healthy
       kafka:
-        condition: service_started
+        condition: service_healthy
     networks:
       - backend-network
   backend2:
@@ -54,7 +54,7 @@ services:
       minio:
         condition: service_healthy
       kafka:
-        condition: service_started
+        condition: service_healthy
     networks:
       - backend-network
   postgres:
@@ -142,8 +142,18 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: "zoo:2181"
     depends_on:
       - zoo
+    volumes:
+      # volume с данными kafka
+      - kafka_data:/bitnami/kafka
     networks:
       - backend-network
+    healthcheck:
+      test: [ "CMD-SHELL", "kafka-topics --list --bootstrap-server kafka:9092" ]
+      interval: 10s
+      timeout: 30s
+      retries: 3
+      start_period: 10s
+      start_interval: 5s
   nginx:
     restart: always
     image: nginx:latest
@@ -151,7 +161,7 @@ services:
     ports:
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx.conf:/etc/nginx/conf.d/nginx.conf
     depends_on:
       - backend1
       - backend2
@@ -164,3 +174,4 @@ volumes:
   postgres_data:
   minio_data:
   redis-data:
+  kafka-data:
