--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,15 +136,12 @@ services:
     image: confluentinc/cp-kafka:latest
     container_name: kafka
     expose:
-      - "29092:29092"
+      - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092
-      KAFKA_ZOOKEEPER_CONNECT: "zoo:2181"
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_ZOOKEEPER_CONNECT: zoo:2181
     depends_on:
       - zoo
-    volumes:
-      # volume с данными kafka
-      - kafka-data:/bitnami/kafka
     networks:
       - backend-network
     healthcheck:
