--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -6,14 +6,14 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name example.org www.example.org;
+    server_name app.com www.app.com;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
     location / {
-            return 301 https://example.org$request_uri;
+            return 301 https://app.com$request_uri;
         }
 
 }
