--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -12,9 +12,9 @@ server {
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
-    location / {
-            return 301 https://app.com$request_uri;
-        }
+#     location / {
+#         return 301 https://app.com$request_uri;
+#     }
 
 }
 # server {
