--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -6,24 +6,19 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name mentorlink.com www.mentorlink.com;
+    server_name _;
     server_tokens off;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
     location / {
-        return 301 https://mentorlink.com$request_uri;
+        return 301 https://localhost$request_uri;
     }
 
 }
 server {
-    listen 443 default_server ssl http2;
-    listen [::]:443 ssl http2;
-    server_name mentorlink.com;
-    ssl_certificate     /etc/letsencrypt/live/mentorlink.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/mentorlink.com/privkey.pem;
-    ssl_trusted_certificate /etc/letsencrypt/live/example.com/chain.pem;
+    listen 443;
+    server_name _;
+    ssl_certificate     /etc/nginx/ssl/localhost.crt;
+    ssl_certificate_key /etc/nginx/ssl/localhost.key;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
