--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -160,19 +160,14 @@ services:
       - "443:443"
     volumes:
       - ./nginx/conf/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./certbot/www:/var/www/certbot/:ro
-      - ./certbot/conf/:/etc/nginx/ssl/:ro
+      - ./ubuntu/home/ssl/localhost.crt:/etc/nginx/ssl/localhost.crt
+      - ./ubuntu/home/ssl/localhost.key:/etc/nginx/ssl/localhost.key
     depends_on:
       - backend1
       - backend2
       - backendws
     networks:
       - backend-network
-  certbot:
-    image: certbot/certbot:latest
-    volumes:
-      - ./certbot/www/:/var/www/certbot/:rw
-      - ./certbot/conf/:/etc/letsencrypt/:rw
 networks:
  backend-network:
 volumes:
