--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -6,7 +6,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name _;
+    server_name localhost;
     server_tokens off;
 
     location / {
@@ -15,13 +15,16 @@ server {
 
 }
 server {
-    listen 443;
-    server_name _;
-    ssl_certificate     /etc/nginx/ssl/localhost.crt;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name localhost;
+    ssl_certificate /etc/nginx/ssl/localhost.crt;
     ssl_certificate_key /etc/nginx/ssl/localhost.key;
 
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
+    root /var/www/html;
+
+    index index.html index.nginx-debian.html;
     location /imagebucket/ {
         proxy_pass http://minio:9000/imagebucket/;
         proxy_set_header Host $host;
