--- a/tests/dev.env
+++ b/tests/dev.env
@@ -2,7 +2,7 @@
 HTTP_PORT=8080
 SERVER_ADDRESS=0.0.0.0:8080
 SERVER_PORT=8080
-POSTGRES_CONN=postgresql://root:123@localhost:5432/postgres?sslmode=disable
+POSTGRES_CONN=postgresql://ZXbIlCBgDOdm8sXmU76uRV:OuTGNmpQC1T0B875o3KeuJ@localhost:5432/database?sslmode=disable
 REDIS_HOST=localhost
 REDIS_PORT=6379
 RANDOM_SECRET=1111111
@@ -12,9 +12,9 @@ MINIO_PORT=9000
 CRYPTO_KEY=12345678901234567890123456789012
 
 # PostgreSQL
-POSTGRES_USER=root
-POSTGRES_PASSWORD=123
-POSTGRES_DB=postgres
+POSTGRES_USER=ZXbIlCBgDOdm8sXmU76uRV
+POSTGRES_PASSWORD=OuTGNmpQC1T0B875o3KeuJ
+POSTGRES_DB=database
 
 # Telegram
 TELEGRAM_BOT_TOKEN=
@@ -27,6 +27,10 @@ AI_TOKEN=
 AI_MODEL=
 
 # Minio
-MINIO_BUCKET_NAME=testbucket
-MINIO_ROOT_USER=testtest
-MINIO_ROOT_PASSWORD=testtest
+MINIO_BUCKET_NAME=imagebucket
+MINIO_ROOT_USER=cooluser
+MINIO_ROOT_PASSWORD=minio123
+
+KAFKA_ADDRESS=kafka:9092
+KAFKA_TOPIC=websocket
+KAFKA_GROUP_ID=groupid
