--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -33,8 +33,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_http_version 1.1;
     }
-    location /ws/ {
-        proxy_pass http://backendws:8080/ws;  # Адрес вашего WebSocket-сервера
+    location /api/users/ws/ {
+        proxy_pass http://backendws:8080/api/users/ws;  # Адрес вашего WebSocket-сервера
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
