--- a/dev.env
+++ b/dev.env
@@ -17,7 +17,7 @@ POSTGRES_PASSWORD=OuTGNmpQC1T0B875o3KeuJ
 POSTGRES_DB=database
 
 # Telegram
-TELEGRAM_BOT_TOKEN=
+BOT_API_TOKEN=
 TELEGRAM_BOT_CHAT_ID=1
 TELEGRAM_BOT_ADMINS=
 
