--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -56,7 +56,7 @@ services:
     ports:
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_ZOOKEEPER_CONNECT: "zoo:2181"
     depends_on:
       - zoo
