tg bot groups and members

--- a/tests/dev.env
+++ b/tests/dev.env
@@ -1,6 +1,6 @@
 # Base
 HTTP_PORT=8080
-SERVER_ADDRESS=0.0.0.0:8080
+BACK_ADDRESS=0.0.0.0:8080
 SERVER_PORT=8080
 POSTGRES_CONN=postgresql://ZXbIlCBgDOdm8sXmU76uRV:OuTGNmpQC1T0B875o3KeuJ@localhost:5432/database?sslmode=disable
 REDIS_HOST=localhost
